--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --green-color:#3d5f00;
+  --body-color:#f3f3f3;
+  --white-color:#ffffff;
+  --light-green:#608b14;
+}
+
+
+/* Base Styling */
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
 }
